# BuckinghamPy

./: .nbinteract.json  LICENSE  README.md  app-logo.key  buckinghampy gui.ipynb  buckinghampy-gui.ipynb  examples.ipynb  generate-doc.sh  requirements.txt  setup.cfg  setup.py
binder/: postBuild
buckinghampy/: __init__.py  buckinghampi.py  buckinghampigui.py  console.py  jupyter.py
doc/: buckinghampi.m.html
gui/: layout.py
src/: __init__.py  buckinghampi.py
src/gui/: __init__.py  buckinghampigui.py
