[metadata]
name = buckinghampy
version = 1.0.2
description = Educational package for dimensional analysis
url = https://github.com/saadgroup/BuckinghamPi
author = Mokbel Karam
author_email = mokbel.karam@chemeng.utah.edu
license = MIT
long_description =
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.16.2
    sympy>=1.3
    tabulate>=0.8.9
